* www/project_tasks.html: Make valid XHTML.

--- a/www/project_tasks.html
+++ b/www/project_tasks.html
@@ -308,6 +308,8 @@ Many instances are recorded in
 
 </div>
 
+</div>
+
 <!-- ============================================================= -->
 <div class="h2" id="bindings" title="bindings">
 <h2>Improved Bindings to Other Languages</h2>
