* www/project_tasks.html   (summer-of-code): Add a large endeavour warning to the missing     text-base task.

--- a/www/project_tasks.html
+++ b/www/project_tasks.html
@@ -74,6 +74,10 @@ the server when committing.  But it's a bit of a space penalty on the
 client side, and it would be nice to offer users the option to turn it
 off sometimes, or failing that, to compress the text bases.</p>
 
+<p>This task is somewhat larger than the others (though still
+perfectly feasible), and should ideally be taken on by someone with
+previous experience in Subversion development.</p>
+
 </div>
 
 <div class="h3" id="python-bindings" title="python-bindings">
@@ -119,7 +123,7 @@ nonrecursive checkouts, so that it is possible to work with them on a
 day-to-day basis.</p>
 
 <p>This task is somewhat larger than the others (though still
-perfectly feasibly), and should ideally be taken on by someone with
+perfectly feasible), and should ideally be taken on by someone with
 previous experience in Subversion development.</p>
 
 </div>
