* www/links.html: Add entry for hosted-projects.com hosting service.
Patch by: Michael Goettsche <mgoettsche@hosted-projects.com>
(Tweaked by me a bit.)

--- a/www/links.html
+++ b/www/links.html
@@ -599,6 +599,15 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
       <p><em>Probably the largest open source project hosting site on
              the Net.</em></p>
     </li>
+
+    <li><p><strong>hosted-projects.com</strong>:
+                   commercial Subversion hosting<br/>
+       <a href="http://www.hosted-projects.com">http://www.hosted-projects.com</a></p>
+       <p><em>hosted-projects.com is a company specialized in web hosting services for
+              software project teams offering the Subversion revision control system coupled
+              with project and issue management software like Trac and Bugzilla.</em></p>
+    </li>
+
   </ul>
 
 </div>
