* www/hacking.html (Credit): Document that we also allow "Reviewed by: "   as a keyword.
Suggested by: rooneg

--- a/www/hacking.html
+++ b/www/hacking.html
@@ -1635,7 +1635,8 @@ indicate their contribution with "Suggested&nbsp;by:&nbsp;":</p>
    * www/hacking.html (crediting): Adjust accordingly.
 </pre>
 
-<p>If someone reviewed the change, use "Review&nbsp;by:&nbsp;":</p>
+<p>If someone reviewed the change, use "Review&nbsp;by:&nbsp;"
+(or "Reviewed&nbsp;by:&nbsp;" if you prefer):</p>
 
 <pre>
    Fix issue #1729: Don't crash because of a missing file.
