--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -38,6 +38,8 @@
 
 <div><a href="/servlets/ProjectDocumentList">Documents &amp; files</a></div>
 
+<div><a href="/tools_contrib.html">Tools &amp; Contrib</a></div>
+
 <div><a href="http://svn.collab.net/viewcvs/svn/">Version control</a></div>
 
 </div><div class="body">
