* www/merge-tracking/design.html   Consistify SVN_MERGE_INFO as SVN_MERGE_PROPERTY.

--- a/www/merge-tracking/design.html
+++ b/www/merge-tracking/design.html
@@ -219,13 +219,16 @@ according to the following:</p>
   <li>Where to put the info:
   <ol>
     <li>If the merge target is a single file, the merge info goes to
-    the property SVN_MERGE_INFO set on that file.</li>
+    the property <code>SVN_MERGE_PROPERTY</code> set on that
+    file.</li>
 
     <li>If the merge target is a non-wc-root directory, the merge info
-    goes to the property SVN_MERGE_INFO set on the directory.</li>
+    goes to the property <code>SVN_MERGE_PROPERTY</code> set on the
+    directory.</li>
 
     <li>If the merge target is a wc-root directory, the merge info
-    goes to the property SVN_MERGE_INFO set on the revprop.</li>
+    goes to the property <code>SVN_MERGE_PROPERTY</code> set on the
+    revprop.</li>
   </ol>
   </li>
 
