Give an informative page title, following the "obvious fix" rule.
* www/tools_contrib.html: Present an informative title.  "TITLE" is a
  little bit characterless as a title. :-)

--- a/www/tools_contrib.html
+++ b/www/tools_contrib.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" type="text/css" media="print"
   href="tigris-branding/css/print.css"/>
 <script type="text/javascript" src="tigris-branding/scripts/tigris.js"></script>
-<title>TITLE</title>
+<title>Subversion Tools and Contrib</title>
 </head>
 
 <body id="bodycol">
