* www/project_tasks.html: Don't ask SoC students to skip to later sections,   because that's not where the information is.

--- a/www/project_tasks.html
+++ b/www/project_tasks.html
@@ -198,7 +198,7 @@ design phase.</p>
 
 <p>These are non-coding tasks, so if you arrived here from the <a
 href="http://code.google.com/summerofcode.html">Google Summer of Code</a>
-pages, please skip to later sections.</p>
+pages, please see the above section.</p>
 
 <div class="h3" id="issue-management" title="issue-management">
 <h3>Issue Management</h3>
