* www/project_status.html: Give a rough release date for 1.4.0.

--- a/www/project_status.html
+++ b/www/project_status.html
@@ -36,7 +36,7 @@ href="roadmap.html">roadmap</a> page.</p>
 
 <ul>
   <li>
-    <p><b>Subversion 1.4.0</b> (<i>future</i>):
+    <p><b>Subversion 1.4.0</b> (<i>late June or early July 2006</i>):
     Feature and bugfix release. <br />
     See <a href="http://subversion.tigris.org/issues/buglist.cgi?component=subversion&amp;issue_status=NEW&amp;issue_status=STARTED&amp;issue_status=REOPENED&amp;target_milestone=1.4&amp;target_milestone=1.4-consider"
     >open issues marked for 1.4 or 1.4-consider</a>.</p>
