--- a/www/tools_contrib.html
+++ b/www/tools_contrib.html
@@ -578,7 +578,7 @@
   <h3><a name="lock_check_py"
     href="http://svn.collab.net/repos/svn/trunk/tools/dev/lock-check.py">lock-check.py</a>
     (<a href="http://svn.collab.net/repos/svn/trunk/tools/dev">tools/dev</a>)</h3>
-  <p>Repository lock checker.  Gets and exclusive lock on the provided
+  <p>Repository lock checker.  Gets an exclusive lock on the provided
      repository, then runs db_stat to see if the lock counts have been
      reset to 0.  If not, prints the timestamp of the run and a message
      about accumulation.
