* www/merge-tracking/design.html: Fix typo.

--- a/www/merge-tracking/design.html
+++ b/www/merge-tracking/design.html
@@ -24,7 +24,7 @@
 <p style="color: red">*** UNDER CONSTRUCTION ***</p>
 
 <p>Subversion's <a href="index.html">merge tracking</a> uses a layered
-design, with the user-visibile operations based primarily on the
+design, with the user-visible operations based primarily on the
 information from the <a href="#merge-history">merge history</a>.</p>
 
 <ul>
