--- a/www/release-process.html
+++ b/www/release-process.html
@@ -174,27 +174,49 @@ release stabilization section of the hacking guide</a>.</p>
 <div class="h2" id="the-changes-file" title="the-changes-file">
 <h2>Managing the CHANGES file</h2>
 
-<div class="h3">
+<p>The <tt>CHANGES</tt> file is the project changelog file.  Before a
+release, it must be brought up to date to list all changes since the
+last release.</p>
+
+<p>For micro-releases, this is fairly easy: you just need to walk
+through the commit logs for the branch since the last "golden"
+revision, and note all interesting merges.  For minor and major
+releases, this is more complex: you need to traverse the commit log on
+<em>trunk</em> since the last release branch was forked, and make note
+of all changes there.  It's the same procedure, but a lot longer, and
+somewhat more complex as it involves filtering out changesets that
+have already been backported to previous release branches and released
+from there.</p>
+
+<p>Remember that <tt>CHANGES</tt> should <em>always</em> be edited on
+trunk and then merged over to the release branch(es) when necessary.
+It is very important that all changes of all releases be documented in
+the CHANGES file on trunk, both for future reference and so that
+future release branches contain the sum of all previous
+changelogs.</p>
+
+</div>
+
+<div class="h3" id="writing-initial-changes" title="writing-initial-changes">
 <h3>Writing the initial content for a branch</h3>
 
 <p>Run <code>svn log -rHEAD:BRANCH_POINT
-http://svn.collab.net/repos/svn/branches/RELEASE</code> (where RELEASE
-is something like 1.4.x, and BRANCH_POINT is a revnum like 16325 where
-the <em>previous</em> release was branched off of the trunk).  This
-should give you every change ever made to the RELEASE line, including
-backports made to the RELEASE branch.  You then need to
-<em>remove</em> logs of changes that have already been released in
-RELEASE - 1 bugfixes (e.g. in 1.3.x).  Run <code>svn log -q
---stop-on-copy</code> on the RELEASE - 1 branch, and then write a
-script to parse the revnums and remove them from your primary log
-output.  (Karl and Ben used to use emacs macros to do that, but
-suggest that we write a more general script.)</p>
+http://svn.collab.net/repos/svn/branches/A.B.x</code>,where
+BRANCH_POINT is the revnum where the previous major/minor release was
+branched off of the trunk.  This should give you every change ever
+made to the A.B.x line, including backports made to the A.B.x branch.
+You then need to <em>remove</em> logs of changes that have already
+been released in micro releases of the previous major/minor branch.
+Run <code>svn log -q --stop-on-copy</code> on the previous release
+branch, and then write a script to parse the revnums and remove them
+from your primary log output.  (Karl and Ben used to use emacs macros
+to do that, but suggest that we write a more general script.)</p>
 
 <p>Read that log from oldest to newest, summarizing points as you go.
 The trick is to know what level of detail to write at: you don't want
 to mention every tiny little commit, but you don't want to be too
 general either.  Set your filter-level by reading through a few pages
-of the CHANGES file before I start writing the new one, just to keep
+of the CHANGES file before starting on the new section, just to keep
 things consistent.</p>
 
 </div>  <!-- h3 -->
@@ -212,6 +234,46 @@ things consistent.</p>
 
 <div class="h2" id="before-release" title="before-release">
 <h2>Preparing to roll a release</h2>
+
+<p>So, a release branch has stabilized, and you are gearing up to roll
+the release.  Before you can actually roll the archives, you need to
+set up a white-room rolling environment.  This environment must
+contain pristine versions of some build tools, as well as all the
+relevant dependancies and other stuff that gets bundled into a
+release tarball.</p>
+
+<p>You need to grab vanilla source tarballs of the following build
+tools before proceeding:</p>
+
+<ul>
+<li><p>The latest Autoconf (2.59 at the time of writing)</p></li>
+<li><p>The latest Libtool (1.5.22 at the time of writing)</p></li>
+<li><p>A known supported version of SWIG (1.3.25 at the time of
+    writing)</p></li>
+</ul>
+
+<p>Also grab the following source tarballs, parts of which will be
+bundled in the Subversion release packages:</p>
+
+<ul>
+<li><p>The latest Unix APR and APR-util of the 0.9.x line (currently
+    0.9.7)</p></li>
+<li><p>The latest Win32 Apache HTTPd release.  From this tarball, we
+    will use the APR, APR-util and APR-iconv bundled libraries.  Note
+    that we should be using the win32 APR tarballs, but they currently
+    have EOL issues on the win32 tarballs.  Check whether this has
+    been fixed, and start using those if it has. (and edit this
+    document to reflect this)</p></li>
+<li><p>A supported version of Neon (currently 0.25.5 is
+    preferred).</p></li>
+</ul>
+
+<p>Once you have all this, you can start the following procedure.
+When it is done, you will have a build environment ready to roll
+tarballs.</p>
+
+<p>TODO: finish</p>
+
 </div>
 
 <![CDATA[=========================================================]]>
