--- a/www/release-process.html
+++ b/www/release-process.html
@@ -192,10 +192,14 @@ from there.</p>
 trunk and then merged over to the release branch(es) when necessary.
 It is very important that all changes of all releases be documented in
 the CHANGES file on trunk, both for future reference and so that
-future release branches contain the sum of all previous
-changelogs.</p>
+future release branches contain the sum of all previous change
+logs.</p>
 
-</div>
+<p>Keep the bullet point for each change concise, preferably no more
+than one line long.  Sometimes that can be a challenge, but it really
+adds to the overall readability of the document.  Think to yourself:
+<i>If it takes more than one line to describe, maybe I'm getting too
+detailed?</i></p>
 
 <div class="h3" id="writing-initial-changes" title="writing-initial-changes">
 <h3>Writing the initial content for a branch</h3>
@@ -219,14 +223,14 @@ general either.  Set your filter-level by reading through a few pages
 of the CHANGES file before starting on the new section, just to keep
 things consistent.</p>
 
-</div>  <!-- h3 -->
+</div>  <!-- writing-initial-changes -->
 
-<div class="h3">
+<div class="h3" id="adding-changes">
 <h3>Adding content for patch release</h3>
 
 <p>TODO</p>
 
-</div>  <!-- h3 -->
+</div>  <!-- adding-changes -->
 
 </div>  <!-- the-changes-file -->
 
