* www/links.html: Add QSvn.
Patch by: Andreas Richter <ar@oszine.de>

--- a/www/links.html
+++ b/www/links.html
@@ -205,6 +205,11 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
                 >http://xsteve.nit.at/prg/vc_svn/</a>
       </p></li>
 
+      <li><p><b>QSvn</b> - A cross-platform GUI Subversion client<br/>
+        <a href="http://ar.oszine.de/projects/qsvn/"
+                >http://ar.oszine.de/projects/qsvn/</a>
+      </p></li>
+
       <li><p><b>RapidSVN</b> - A cross-platform GUI front-end for Subversion<br/>
         <a href="http://rapidsvn.tigris.org/"
                 >http://rapidsvn.tigris.org/</a>
