* www/project_packages.html (Win32 Packages Section): Changed the win32 setup     package maintainer to myself (Troy Simpson) along with my email address     hyperlinked with my name.

--- a/www/project_packages.html
+++ b/www/project_packages.html
@@ -277,7 +277,7 @@ href="http://subversion.tigris.org/faq.html#bdb43-upgrade">FAQ</a>.</p>
 </div>
 
 <p><em>Maintainer:
-<a href="mailto:jostein@josander.net">Jostein Andersen</a></em></p>
+<a href="mailto:troy@ebswift.com">Troy Simpson</a></em></p>
 
 <p>The same command-line binaries and libraries, but packaged within a
 friendly Installer program, are in <a
