* www/links.html   (misc_resources): Add link to the Segetech Open Source Rendezvous.

--- a/www/links.html
+++ b/www/links.html
@@ -797,6 +797,14 @@ see our <a href="testimonials.html">testimonials page</a> instead.</p>
                 >https://moin.conectiva.com.br/RepositorySystem</a>
       </p></li>
 
+      <li><p><b>Segetech Open Source Rendezvous</b>
+        Detailed guide to configuring open source collaboration tools
+        such as Subversion, Bugzilla, and MediaWiki so that they work
+        in concert.<br/>
+        <a href="http://oss.segetech.com/bugzilla-svn-wiki.html"
+                >http://oss.segetech.com/bugzilla-svn-wiki.html</a>
+      </p></li>
+
     </ul>
 
 </div>
