Fix typo, following the "obvious fix" rule.
* www/project_packages.html (openbsd): Correct commands for building.

--- a/www/project_packages.html
+++ b/www/project_packages.html
@@ -183,7 +183,7 @@ href="http://www.openbsd.org/cgi-bin/cvsweb.cgi/ports/devel/subversion/"
 >http://www.openbsd.org/cgi-bin/cvsweb.cgi/ports/devel/subversion/</a></p>
 
 <p>Assuming your ports tree is up-to-date, just do:</p>
-<pre>cd /usr/ports/devel/; subversion; make install</pre>
+<pre>cd /usr/ports/devel/subversion; make install</pre>
 
 </div>
 
